--- a/index.html
+++ b/index.html
@@ -124,9 +124,11 @@
                 <p><strong>Email:</strong> tianruo.you@berkeley.edu</p>
                 <p><strong>Phone:</strong> +1 (805) 724-9206</p>
                 <p><strong>Address:</strong> 730 Kinkead Way, Albany, CA 94706</p>
-                <p><strong>Website:</strong> <a href="http://www.youtianruo.com">http://www.youtianruo.com</a></p>
+                <p><strong>Website:</strong> <a href="https://youtianruo.github.io/">https://youtianruo.github.io/</a></p>
             </div>
         </section>
+
+        
 
         <footer>
             <p>&copy; 2025 Tianruo You. All rights reserved.</p>
