Update index_static.html with modern design and fix Jekyll dependencies

--- a/index_static.html
+++ b/index_static.html
@@ -156,7 +156,7 @@
       <!-- Hero -->
       <section class="hero" id="about">
         <div class="hero-card">
-          <h2>Hi — I'm Tianruo. 👋</h2>
+          <h2>Hi — I’m Tianruo. 👋</h2>
           <p>
             I am a Mathematics student at <strong>UC Berkeley</strong>. My interests include
             <em>topology</em>, <em>algebra</em>, and <em>scientific computing</em>. I enjoy problems at the
@@ -221,7 +221,7 @@
             <h4>Paul Atzberger Research Group</h4>
             <div class="meta"><span>Research student under Paul Atzberger</span><span class="dot"></span><span>Santa Barbara, CA</span><span class="dot"></span><span>Nov. 2023 — Jun. 2024</span></div>
             <ul class="bullets">
-              <li>Simulated cryptocurrency price triangulation using stochastic processes to model arbitrage (explaining the "kimchi premium").</li>
+              <li>Simulated cryptocurrency price triangulation using stochastic processes to model arbitrage (explaining the “kimchi premium”).</li>
               <li>Applied a stochastic immersed boundary method for micro-scale fluid–structure interaction simulations.</li>
             </ul>
           </article>
