--- a/index.html
+++ b/index.html
@@ -1,281 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<<<<<<< HEAD
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tianruo You - Mathematics Student at UC Berkeley</title>
-    <style>
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
-<<<<<<< HEAD
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            background-color: #fdfdfd;
-            color: #111;
-        }
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-        header {
-            border-bottom: 1px solid #e8e8e8;
-            padding-bottom: 20px;
-            margin-bottom: 30px;
-        }
-        h1 {
-            color: #2a7ae2;
-            margin-bottom: 10px;
-        }
-        h2 {
-            color: #424242;
-            margin-top: 30px;
-            margin-bottom: 15px;
-        }
-        nav {
-            margin: 20px 0;
-        }
-        nav a {
-            display: inline-block;
-            margin-right: 20px;
-            color: #2a7ae2;
-            text-decoration: none;
-            padding: 5px 10px;
-            border: 1px solid #e8e8e8;
-            border-radius: 3px;
-        }
-        nav a:hover {
-            background-color: #f0f0f0;
-        }
-        .contact-info {
-            background-color: #f9f9f9;
-            padding: 15px;
-            border-radius: 5px;
-            margin: 20px 0;
-        }
-        ul, ol {
-            margin-left: 20px;
-        }
-        li {
-            margin-bottom: 5px;
-        }
-        footer {
-            border-top: 1px solid #e8e8e8;
-            margin-top: 40px;
-            padding-top: 20px;
-            text-align: center;
-            color: #666;
-=======
-            line-height: 1.4;
-            margin: 0;
-            padding: 0;
-            background-color: #ffffff;
-            color: #000000;
-            font-size: 11pt;
-        }
-        .container {
-            max-width: 8.5in;
-            margin: 0 auto;
-            padding: 0.5in;
-        }
-        .header {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-        .header h1 {
-            font-size: 24pt;
-            font-weight: bold;
-            margin: 0 0 8px 0;
-            color: #000000;
-        }
-        .header p {
-            margin: 2px 0;
-            font-size: 11pt;
-        }
-        .header a {
-            color: #000000;
-            text-decoration: none;
-        }
-        .header a:hover {
-            text-decoration: underline;
-        }
-        .section {
-            margin-bottom: 15px;
-        }
-        .section-title {
-            font-size: 14pt;
-            font-weight: bold;
-            text-transform: uppercase;
-            letter-spacing: 0.5px;
-            margin: 15px 0 8px 0;
-            padding-bottom: 2px;
-            border-bottom: 1px solid #000000;
-        }
-        .experience-item {
-            margin-bottom: 12px;
-        }
-        .experience-header {
-            display: flex;
-            justify-content: space-between;
-            align-items: flex-start;
-            margin-bottom: 4px;
-        }
-        .experience-title {
-            font-weight: bold;
-            font-size: 11pt;
-        }
-        .experience-location {
-            font-weight: bold;
-            font-size: 11pt;
-        }
-        .experience-subtitle {
-            font-style: italic;
-            font-size: 10pt;
-            color: #333;
-        }
-        .experience-date {
-            font-style: italic;
-            font-size: 10pt;
-            color: #333;
-        }
-        .experience-details {
-            margin-left: 15px;
-            margin-top: 4px;
-        }
-        .experience-details ul {
-            margin: 4px 0;
-            padding-left: 15px;
-        }
-        .experience-details li {
-            margin-bottom: 2px;
-            font-size: 10pt;
-        }
-        .coursework {
-            font-size: 10pt;
-            margin-top: 8px;
-            font-style: italic;
-        }
-        .contact-info {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            flex-wrap: wrap;
-            margin-bottom: 20px;
-        }
-        .contact-info span {
-            font-size: 11pt;
-        }
-        @media print {
-            body {
-                font-size: 10pt;
-            }
-            .container {
-                max-width: none;
-                padding: 0.3in;
-            }
-        }
-        @media (max-width: 768px) {
-            .container {
-                padding: 15px;
-            }
-            .experience-header {
-                flex-direction: column;
-                align-items: flex-start;
-            }
-            .contact-info {
-                flex-direction: column;
-                gap: 5px;
-            }
->>>>>>> e3e7d1275d2ddb14649d85dcbfe82c266a598501
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-<<<<<<< HEAD
-        <header>
-            <div style="display: flex; align-items: center; gap: 20px;">
-                <img src="https://via.placeholder.com/120x120/2a7ae2/ffffff?text=Tianruo+You" 
-                     alt="Tianruo You" 
-                     style="width: 120px; height: 120px; border-radius: 50%; object-fit: cover; border: 3px solid #2a7ae2;">
-                <div>
-                    <h1>Tianruo You</h1>
-                    <p>Mathematics Student at UC Berkeley</p>
-                </div>
-            </div>
-        </header>
-
-        <nav>
-            <a href="#about">About</a>
-            <a href="#research">Research</a>
-            <a href="#education">Education</a>
-            <a href="#contact">Contact</a>
-        </nav>
-
-        <section id="about">
-            <h2>About Me</h2>
-            <p>I am Tianruo You, a mathematics student at UC Berkeley with research interests in topology, differential geometry, and computational mathematics. I am currently pursuing my Bachelor of Arts in Mathematics at UC Berkeley, where I maintain a perfect 4.00 GPA.</p>
-            
-            <p>My academic journey has taken me through multiple prestigious institutions, including Vanderbilt University and UC Santa Barbara, where I also achieved perfect GPAs in mathematics programs. My research focuses on exploring fundamental concepts in topology and differential geometry, particularly through the lens of degree theory and its applications to classical results like the Hairy Ball Theorem.</p>
-        </section>
-
-        <section id="research">
-            <h2>Research Interests</h2>
-            <ul>
-                <li><strong>Topology</strong>: Degree theory, algebraic topology methods, and topological obstructions</li>
-                <li><strong>Differential Geometry</strong>: Vector fields on manifolds and geometric structures</li>
-                <li><strong>Computational Mathematics</strong>: Stochastic processes, fluid-structure interactions, and computer vision applications</li>
-                <li><strong>Applied Mathematics</strong>: Cryptocurrency modeling, computational morphometrics, and digital humanities</li>
-            </ul>
-
-            <h3>Current Research Projects</h3>
-            <ol>
-                <li><strong>Hairy Ball Theorem and Degree Theory Exploration</strong> - Research under Galen Liang at UC Berkeley (Aug. 2025 - Present)</li>
-                <li><strong>NSF Big-Bee Project: Trait Digitalization of Anthophila</strong> - UC Santa Barbara & UC Berkeley (Aug. 2023 - Present)</li>
-                <li><strong>Syriac Text Digitalization and Database Development</strong> - Vanderbilt University (Aug. 2024 - May. 2025)</li>
-            </ol>
-        </section>
-
-        <section id="education">
-            <h2>Education</h2>
-            <ul>
-                <li><strong>UC Berkeley</strong> - Bachelor of Arts in Mathematics, GPA: 4.00 (Aug. 2025 – Jun. 2026, Expected)</li>
-                <li><strong>Vanderbilt University</strong> - Bachelor of Arts in Mathematics, GPA: 4.00 (Aug. 2024 – May. 2025)</li>
-                <li><strong>UC Santa Barbara</strong> - Bachelor of Arts in Applied Mathematics, GPA: 4.00 (Sep. 2023 – Jun. 2024)</li>
-            </ul>
-
-            <h3>Relevant Coursework</h3>
-            <p>Advanced Matrix Computations, Advanced Linear Algebra, Abstract Algebra, Real Analysis, Differential Geometry, Topology.</p>
-        </section>
-
-        <section id="contact">
-            <h2>Contact Information</h2>
-            <div class="contact-info">
-                <p><strong>Email:</strong> tianruo.you@berkeley.edu</p>
-                <p><strong>Phone:</strong> +1 (805) 724-9206</p>
-                <p><strong>Address:</strong> 730 Kinkead Way, Albany, CA 94706</p>
-                <p><strong>Website:</strong> <a href="http://www.youtianruo.com">http://www.youtianruo.com</a></p>
-            </div>
-        </section>
-
-        <footer>
-            <p>&copy; 2025 Tianruo You. All rights reserved.</p>
-        </footer>
-    </div>
-</body>
-</html>
-=======
-        <div class="header">
-            <h1><a href="http://youtianruo.com/">Tianruo You</a></h1>
-            <p>730 Kinkead Way, Albany, CA 94706</p>
-            <div class="contact-info">
-                <span><a href="mailto:tianruo.you@berkeley.edu">tianruo.you@berkeley.edu</a></span>
-                <span>+1 (805) 724-9206</span>
-                <span><a href="http://youtianruo.com/">http://www.youtianruo.com</a></span>
-            </div>
-=======
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Tianruo You — Mathematics</title>
@@ -321,8 +46,6 @@
         --shadow: 0 1px 2px rgba(0,0,0,.3), 0 8px 24px rgba(0,0,0,.25);
       }
     }
-    [data-theme="light"]{color-scheme: light}
-    [data-theme="dark"]{color-scheme: dark}
 
     html,body{height:100%}
     body{
@@ -359,7 +82,6 @@
     .navlinks a{padding:8px 10px; border-radius:10px}
     .navlinks a:hover{background: color-mix(in oklab, var(--accent) 12%, transparent)}
 
-    .controls{display:flex; align-items:center; gap:8px}
     .btn{border:1px solid var(--border); background:var(--card); border-radius:12px; padding:8px 12px; box-shadow: var(--shadow); display:inline-flex; align-items:center; gap:8px; cursor:pointer}
     .btn:hover{border-color: color-mix(in oklab, var(--accent) 40%, var(--border))}
 
@@ -418,7 +140,6 @@
             <h1>Tianruo You</h1>
             <div class="subtitle">Mathematics @ UC&nbsp;Berkeley</div>
           </div>
->>>>>>> 7b18ade97b6931babd5a01c28154d1a5e5ba3301
         </div>
         <div class="navlinks">
           <a href="#about">About</a>
@@ -427,9 +148,6 @@
           <a href="#experience">Experience</a>
           <a href="#cv">CV</a>
           <a href="#contact">Contact</a>
-        </div>
-        <div class="controls">
-          <button class="btn" id="themeBtn" aria-label="Toggle dark mode" title="Toggle theme">🌓</button>
         </div>
       </nav>
     </header>
@@ -448,7 +166,7 @@
           <div class="quick" aria-label="Quick facts">
             <span class="chip">GPA 4.00</span>
             <span class="chip">Albany, CA</span>
-            <span class="chip">Open to research collaborations</span>
+            <a class="chip" href="https://linkedin.com/in/tianruo-you" target="_blank" rel="noopener">LinkedIn</a>
           </div>
         </div>
         <div class="hero-card">
@@ -520,32 +238,13 @@
         </div>
       </section>
 
-      <!-- Experience -->
-      <section id="experience">
-        <div class="section-title"><h3>Professional Experience</h3></div>
+      <!-- Selected Writings -->
+      <section id="publications">
+        <div class="section-title"><h3>Selected Writings</h3></div>
         <div class="grid one">
           <article class="card">
-            <h4>Syriac Text Digitalization & Database Development</h4>
-            <div class="meta"><span>Data Science Assistant under David A. Michelson</span><span class="dot"></span><span>Nashville, TN</span><span class="dot"></span><span>Aug. 2024 — May. 2025</span></div>
-            <ul class="bullets">
-              <li>Repaired discrepancies in the <span class="kbd">Syriaca.org</span> database by tracing entries to original Syriac sources and performing targeted HTML edits.</li>
-              <li>Improved accuracy and stability of the Syriac Reference Portal to support scholarly search and cross‑reference of Syriac Christian texts.</li>
-            </ul>
-          </article>
-        </div>
-      </section>
-
-      <!-- Publications (optional placeholder) -->
-      <section id="publications">
-        <div class="section-title"><h3>Selected Writings</h3><span class="small">Add preprints/notes as they’re ready</span></div>
-        <div class="grid two">
-          <article class="card">
-            <h4>Degree Theory as an Entry to Topology (in preparation)</h4>
-            <div class="small">With G. Liang. Draft available upon request.</div>
-          </article>
-          <article class="card">
-            <h4>Camouflage & Morphometrics in <em>Bombus</em> (notes)</h4>
-            <div class="small">Pipeline summary and preliminary measurements.</div>
+            <h4><a href="https://escholarship.org/uc/item/8xd7s974" target="_blank" rel="noopener">eScholarship: UC item 8xd7s974</a></h4>
+            <div class="small">External link to my work on eScholarship.</div>
           </article>
         </div>
       </section>
@@ -556,7 +255,7 @@
         <div class="card">
           <p>Download a concise CV or view the full resume.</p>
           <p>
-            <a class="btn" href="cv.pdf" download>⬇️ Download CV (PDF)</a>
+            <a class="btn" href="cv.pdf" download⬇️ Download CV (PDF)</a>
             <a class="btn" href="https://youtianruo.github.io/" target="_blank" rel="noopener">🌐 Full Resume / Site</a>
           </p>
           <p class="small">Place your compiled CV as <code>cv.pdf</code> next to this file.</p>
@@ -576,13 +275,9 @@
             </ul>
           </div>
           <div class="card">
-            <p class="small" style="margin:0 0 6px">Profiles (add any you use):</p>
+            <p class="small" style="margin:0 0 6px">Profiles</p>
             <div class="quick">
-              <!-- Replace <#> with your URLs or remove chips you don't use -->
-              <a class="chip" href="https://scholar.google.com/" target="_blank" rel="noopener">Google Scholar</a>
-              <a class="chip" href="https://orcid.org/" target="_blank" rel="noopener">ORCID</a>
-              <a class="chip" href="https://github.com/" target="_blank" rel="noopener">GitHub</a>
-              <a class="chip" href="https://www.linkedin.com/" target="_blank" rel="noopener">LinkedIn</a>
+              <a class="chip" href="https://linkedin.com/in/tianruo-you" target="_blank" rel="noopener">LinkedIn</a>
             </div>
           </div>
         </div>
@@ -596,21 +291,8 @@
     </footer>
   </div>
 
-  <!-- Theme + footer scripts -->
+  <!-- Footer scripts (no theme switching) -->
   <script>
-    // Theme persistence
-    (function(){
-      const root = document.documentElement;
-      const key = 'theme-preference';
-      function setTheme(v){root.setAttribute('data-theme', v);}
-      function getPref(){return localStorage.getItem(key) || (window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark':'light');}
-      setTheme(getPref());
-      document.getElementById('themeBtn').addEventListener('click', ()=>{
-        const next = root.getAttribute('data-theme') === 'dark' ? 'light' : 'dark';
-        setTheme(next); localStorage.setItem(key, next);
-      });
-    })();
-
     // Footer year and updated timestamp
     document.getElementById('y').textContent = new Date().getFullYear();
     (function(){
@@ -642,7 +324,8 @@
       "name": "University of California, Berkeley"
     },
     "sameAs": [
-      "https://youtianruo.github.io/"
+      "https://youtianruo.github.io/",
+      "https://linkedin.com/in/tianruo-you"
     ]
   }
   </script>
@@ -656,11 +339,10 @@
   -->
 
   <style media="print">
-    header, .controls, .navlinks, #themeBtn, footer a[href^="#"]{display:none !important}
+    header, .navlinks, footer a[href^="#"]{display:none !important}
     .container{padding:0}
     .card, .hero-card{box-shadow:none; border-color:#bbb}
     a{text-decoration: none}
   </style>
 </body>
 </html>
->>>>>>> e3e7d1275d2ddb14649d85dcbfe82c266a598501
