--- a/index.html
+++ b/index.html
@@ -258,7 +258,6 @@
             <a class="btn" href="cv.pdf" download⬇️ Download CV (PDF)</a>
             <a class="btn" href="https://youtianruo.github.io/" target="_blank" rel="noopener">🌐 Full Resume / Site</a>
           </p>
-          <p class="small">Place your compiled CV as <code>cv.pdf</code> next to this file.</p>
         </div>
       </section>
 
@@ -308,7 +307,7 @@
     "@context": "https://schema.org",
     "@type": "Person",
     "name": "Tianruo You",
-    "url": "https://youtianruo.com/",
+    "url": "https://youtianruo.github.io/",
     "image": "headshot.jpg",
     "email": "mailto:tianruo.you@berkeley.edu",
     "telephone": "+18057249206",
@@ -346,3 +345,4 @@
   </style>
 </body>
 </html>
+
