--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
               <li><strong>Email:</strong> <a href="mailto:tianruo.you@berkeley.edu">tianruo.you@berkeley.edu</a></li>
               <li><strong>Phone:</strong> <a href="tel:+18057249206">+1 (805) 724‑9206</a></li>
               <li><strong>Location:</strong> Albany, CA 94706</li>
-              <li><strong>Web:</strong> <a href="https://youtianruo.com/">youtianruo.com</a></li>
+              <li><strong>Web:</strong> <a href="https://youtianruo.github.io/">https://youtianruo.github.io/</a></li>
             </ul>
           </div>
           <div class="card">
@@ -349,5 +349,6 @@
   </style>
 </body>
 </html>
+
 
 
