--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta property="og:title" content="Tianruo You — Mathematics" />
   <meta property="og:description" content="Academic homepage of Tianruo You — Mathematics student at UC Berkeley." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://youtianruo.com/" />
+  <meta property="og:url" content="https://youtianruo.github.io/" />
   <meta property="og:image" content="headshot.jpg" />
   <meta name="twitter:card" content="summary" />
 
@@ -349,6 +349,7 @@
   </style>
 </body>
 </html>
+
 
 
 
