--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
             <ul class="bullets" style="list-style: none; padding-left:0; margin:0">
               <li><strong>Email:</strong> <a href="mailto:tianruo.you@berkeley.edu">tianruo.you@berkeley.edu</a></li>
               <li><strong>Phone:</strong> <a href="tel:+18057249206">+1 (805) 724‑9206</a></li>
-              <li><strong>Location:</strong> Albany, CA 94706</li>
+              <li><strong>Location:</strong> 730 Kinkead Way, Albany, CA 94706</li>
               <li><strong>Web:</strong> <a href="https://youtianruo.github.io/">https://youtianruo.github.io/</a></li>
             </ul>
           </div>
@@ -349,6 +349,7 @@
   </style>
 </body>
 </html>
+
 
 
 
