--- a/index.html
+++ b/index.html
@@ -207,6 +207,16 @@
       <section id="research">
         <div class="section-title"><h3>Research</h3></div>
         <div class="grid two">
+
+          <article class="card">
+            <h4>LLM-based Analysis of Monetary Policy Effects on Stablecoin Behaviors</h4>
+            <div class="meta"><span>Researcher under Joseph M. Hellerstein, Stephen Bianchi</span><span class="dot"></span><span>Berkeley, CA</span><span class="dot"></span><span>Jun. 2025 — Sep. 2025</span></div>
+            <ul class="bullets">
+              <li>Developed LLM-based models to study stablecoin volatility under monetary policies, incorporating social perception and sentiment dynamics alongside macroeconomic variables.</li>
+              <li>Built predictive frameworks that generate fundamental, interpretable insights into stablecoin behavior—beyond numerical forecasts—bridging economic theory with AI-driven analysis.</li>
+            </ul>
+          </article>
+          
           <article class="card">
             <h4>Hairy Ball Theorem & Degree Theory Exploration</h4>
             <div class="meta"><span>Research student under Galen Liang</span><span class="dot"></span><span>Berkeley, CA</span><span class="dot"></span><span>Aug. 2025 — Present</span></div>
@@ -333,6 +343,7 @@
   </style>
 </body>
 </html>
+
 
 
 
