--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             </ul>
           </article>
 
-          <article class="card" style="grid-column: 1 / -1">
+          <article class="card">
             <h4>NSF Big‑Bee: Trait Digitalization of <em>Anthophila</em></h4>
             <div class="meta"><span>Researcher</span><span class="dot"></span><span>Santa Barbara, CA · Berkeley, CA</span><span class="dot"></span><span>Aug. 2023 — Present</span></div>
             <ul class="bullets">
@@ -343,6 +343,7 @@
   </style>
 </body>
 </html>
+
 
 
 
