--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
           <article class="card">
             <h4>LLM-based Analysis of Monetary Policy Effects on Stablecoin Behaviors</h4>
-            <div class="meta"><span>Researcher under Joseph M. Hellerstein, Stephen Bianchi</span><span class="dot"></span><span>Berkeley, CA</span><span class="dot"></span><span>Jun. 2025 — Sep. 2025</span></div>
+            <div class="meta"><span>Researcher under Stephen Bianchi</span><span class="dot"></span><span>Berkeley, CA</span><span class="dot"></span><span>Jun. 2025 — Sep. 2025</span></div>
             <ul class="bullets">
               <li>Developed LLM-based models to study stablecoin volatility under monetary policies, incorporating social perception and sentiment dynamics alongside macroeconomic variables.</li>
               <li>Built predictive frameworks that generate fundamental, interpretable insights into stablecoin behavior—beyond numerical forecasts—bridging economic theory with AI-driven analysis.</li>
@@ -343,6 +343,7 @@
   </style>
 </body>
 </html>
+
 
 
 
