--- a/index.html
+++ b/index.html
@@ -247,6 +247,21 @@
         </div>
       </section>
 
+      <!-- Experience -->
+      <section id="experience">
+        <div class="section-title"><h3>Experience</h3></div>
+        <div class="grid two">
+          <article class="card">
+            <h4>Syriac Text Digitalization and Database Development
+            <div class="meta"><span>Data Science Assistant under David A. Michelson</span><span class="dot"></span><span>Nashville, TN</span><span class="dot"></span><span>Aug. 2024 - May. 2025</span></div>
+            <ul class="bullets">
+              <li>Repaired discrepancies in the Syriaca.org database by tracing entries back to original Syriac sources and applying targeted HTML edits, supporting the accurate digitalization of Syriac Christian manuscripts.
+              <li>Improved the accuracy and stability of the Syriac Reference Portal, enabling scholars to more reliably search, cross-reference, and analyze Syriac Christian texts.
+            </ul>
+          </article>
+        </div>
+      </section>
+
       <!-- Selected Writings -->
       <section id="publications">
         <div class="section-title"><h3>Selected Writings</h3></div>
@@ -343,6 +358,7 @@
   </style>
 </body>
 </html>
+
 
 
 
