--- a/index.html
+++ b/index.html
@@ -17,40 +17,40 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com"/>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=IBM+Plex+Mono:wght@400;600&display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&family=IBM+Plex+Mono:wght@400;600&display=swap" rel="stylesheet"/>
 
   <style>
     :root{
       --bg: #ffffff;
-      --text: #111827; /* zinc-900 */
-      --muted: #6b7280; /* gray-500 */
-      --border: #e5e7eb; /* gray-200 */
+      --text: #1a1a1a;
+      --muted: #666666;
+      --border: #e0e0e0;
       --card: #ffffff;
-      --accent: #003262; /* Berkeley blue */
-      --accent-2: #3B7EA1; /* lighter Berkeley blue */
+      --accent: #dc2626; /* red-600 */
+      --accent-2: #ef4444; /* red-500 */
       --link: var(--accent);
-      --code-bg:#f8fafc;
-      --shadow: 0 1px 2px rgba(0,0,0,.06), 0 8px 24px rgba(0,0,0,.05);
+      --code-bg:#f5f5f5;
+      --shadow: 0 1px 3px rgba(0,0,0,.08), 0 6px 20px rgba(0,0,0,.06);
     }
     @media (prefers-color-scheme: dark){
       :root{
-        --bg:#0b0d12;
-        --text:#e5e7eb;
-        --muted:#9aa1ad;
-        --border:#1f2937;
-        --card:#0f1219;
-        --accent:#5aa7ff;
-        --accent-2:#84c1ff;
+        --bg:#ffffff;
+        --text:#1a1a1a;
+        --muted:#666666;
+        --border:#e0e0e0;
+        --card:#ffffff;
+        --accent:#dc2626;
+        --accent-2:#ef4444;
         --link: var(--accent);
-        --code-bg:#0c1117;
-        --shadow: 0 1px 2px rgba(0,0,0,.3), 0 8px 24px rgba(0,0,0,.25);
+        --code-bg:#f5f5f5;
+        --shadow: 0 1px 3px rgba(0,0,0,.08), 0 6px 20px rgba(0,0,0,.06);
       }
     }
 
     html,body{height:100%}
     body{
       margin:0;
-      font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
+      font-family: 'Montserrat', system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
       line-height:1.6;
       color:var(--text);
       background:var(--bg);
@@ -438,7 +438,6 @@
   </style>
 </body>
 </html>
-
 
 
 
