--- a/index.html
+++ b/index.html
@@ -159,10 +159,7 @@
       <section class="hero" id="about">
         <div class="hero-card">
           <p>
-            I am a Mathematics student at <strong>UC Berkeley</strong>. My interests span
-            <em>topology</em>, <em>algebra</em>, <em>scientific computing</em>, and <em>machine learning</em>. 
-            I enjoy problems at the interface of pure mathematics and computation — from differential 
-            geometry and topological theorems to normalizing flows, sentiment modeling, and computer vision.
+            I am a pure math student at UC Berkeley. My primary background is in topology, differential geometry, and algebra. I'm now also becoming proficient in numerical mathematics and ML. I'm interested in geometric/topological solutions in statistical learning.
           </p>
           <div class="quick" aria-label="Quick facts">
             <span class="chip">GPA 4.00</span>
@@ -170,15 +167,6 @@
             <a class="chip" href="https://linkedin.com/in/tianruo-you" target="_blank" rel="noopener">LinkedIn</a>
           </div>
         </div>
-        <div class="hero-card">
-          <h2>Currently</h2>
-          <ul class="bullets">
-            <li>Working on efficient computation of Jacobian determinants in Normalizing Flows with Ming Gu.</li>
-            <li>Exploring the Poincaré–Hopf Theorem and its applications in topology with Galen Liang.</li>
-            <li>Continuing <span class="kbd">NSF Big-Bee</span> imaging and trait digitalization work.</li>
-          </ul>
-        </div>
-      </section>
 
       <!-- Education -->
       <section id="education">
@@ -435,6 +423,7 @@
   </style>
 </body>
 </html>
+
 
 
 
