Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       --muted: #666666;
       --border: #e0e0e0;
       --card: #ffffff;
-      --accent: #DC143C; /* crimson */
-      --accent-2: #E63946; /* lighter crimson */
+      --accent: #A0226D; /* reddish purple */
+      --accent-2: #B83280; /* lighter reddish purple */
       --link: var(--accent);
       --code-bg:#f5f5f5;
       --shadow: 0 1px 3px rgba(0,0,0,.08), 0 6px 20px rgba(0,0,0,.06);
@@ -434,6 +434,7 @@
   </style>
 </body>
 </html>
+
 
 
 
