--- a/index.html
+++ b/index.html
@@ -39,13 +39,14 @@
         --muted:#666666;
         --border:#e0e0e0;
         --card:#ffffff;
-        --accent:#DC143C;
-        --accent-2:#E63946;
+        --accent:#A0226D;
+        --accent-2:#B83280;
         --link: var(--accent);
         --code-bg:#f5f5f5;
         --shadow: 0 1px 3px rgba(0,0,0,.08), 0 6px 20px rgba(0,0,0,.06);
       }
     }
+
 
     html,body{height:100%}
     body{
@@ -434,6 +435,7 @@
   </style>
 </body>
 </html>
+
 
 
 
