--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       --muted: #666666;
       --border: #e0e0e0;
       --card: #ffffff;
-      --accent: #A0226D; /* reddish purple */
-      --accent-2: #B83280; /* lighter reddish purple */
+      --accent: #DC143C; /* crimson */
+      --accent-2: #E63946; /* lighter crimson */
       --link: var(--accent);
       --code-bg:#f5f5f5;
       --shadow: 0 1px 3px rgba(0,0,0,.08), 0 6px 20px rgba(0,0,0,.06);
@@ -39,8 +39,8 @@
         --muted:#666666;
         --border:#e0e0e0;
         --card:#ffffff;
-        --accent:#A0226D;
-        --accent-2:#B83280;
+        --accent:#DC143C;
+        --accent-2:#E63946;
         --link: var(--accent);
         --code-bg:#f5f5f5;
         --shadow: 0 1px 3px rgba(0,0,0,.08), 0 6px 20px rgba(0,0,0,.06);
@@ -435,6 +435,7 @@
   </style>
 </body>
 </html>
+
 
 
 
