--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com"/>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
-  <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400;0,6..96,500;0,6..96,600;0,6..96,700;0,6..96,800;1,6..96,400&family=IBM+Plex+Mono:wght@400;600&display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&family=IBM+Plex+Mono:wght@400;600&display=swap" rel="stylesheet"/>
 
   <style>
     :root{
@@ -50,7 +50,7 @@
     html,body{height:100%}
     body{
       margin:0;
-      font-family: 'Bodoni Moda', serif;
+      font-family: 'Montserrat', system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
       line-height:1.6;
       color:var(--text);
       background:var(--bg);
@@ -59,6 +59,7 @@
     }
     a{color:var(--link); text-decoration: none}
     a:hover{text-decoration: underline}
+
 
 
     .container{max-width: 1050px; margin: 0 auto; padding: 24px 20px 64px}
@@ -435,6 +436,7 @@
   </style>
 </body>
 </html>
+
 
 
 
