--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Academic homepage of Tianruo You — Mathematics student at UC Berkeley. Research interests: topology, algebra, normalizing flows, scientific computing, machine learning, and computer vision." />
   <meta name="author" content="Tianruo You" />
 
-    <!-- Open Graph / Twitter for rich previews -->
+  <!-- Open Graph / Twitter for rich previews -->
   <meta property="og:title" content="Tianruo You — Mathematics" />
   <meta property="og:description" content="Academic homepage of Tianruo You — Mathematics student at UC Berkeley." />
   <meta property="og:type" content="website" />
@@ -17,7 +17,7 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com"/>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
-  <link href="https://fonts.googleapis.com/css2?family=Goldman:wght@400;700&family=IBM+Plex+Mono:wght@400;600&display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&family=IBM+Plex+Mono:wght@400;600&display=swap" rel="stylesheet"/>
 
   <style>
     :root{
@@ -50,7 +50,7 @@
     html,body{height:100%}
     body{
       margin:0;
-      font-family: 'Goldman', system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+      font-family: 'Montserrat', system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
       line-height:1.6;
       color:var(--text);
       background:var(--bg);
@@ -436,6 +436,7 @@
   </style>
 </body>
 </html>
+
 
 
 
